
Changes in version 0.7.6
- Fix bug where factory erun method wasn't getting called at end of
  program.
- Fixed bugs where plugin paths would stop being searched when a
  matching file was found even if it could be attached. Also,
  print information about seach paths before looking for file
  and not just if it failed to find the plugin.

Changes in version 0.7.5p2
- Fixed bug (yet again) in JStreamLog destructor that caused seg. faults
  at program exit when using plugins on RHEL6

Changes in version 0.7.5p1
- Added RootFillLock and RootFillUnLock methods to JApplication

Changes in version 0.7.5
- Fixed potential bug in JEventLoopGetFactory where NULL pointers could
  be passed to strcmp
- Fixed bug in PrintFactoryReport where long factory names could cause crash
- Fixed bug in janaroot where string types containing colons would
  have values truncated to first colon
- Print date/time of when a thread finishes.
- Added THREAD_STALL_WARN_TIMEOUT
- Added fallback for when resource file is not same name as namepath and
  does not appear in resources file.

Changes in version 0.7.4p2
- Fixed bug in JFactory::Get where event number and run number types
  of local variables were not consistent with rest of JANA.

Changes in version 0.7.4p1
- Fixed bug where default JEventProcessor::evnt was calling int version of
  itself leading to hangs.
- Fixed problem in SBMS AddROOT where it assumed (DY)LD_LIBRARY_PATH was
  set. This caused crashes on OS X El Capitan

Changes in version 0.7.4
- Fixed bug in location osrelease.pl was being run
- Fixed bug where JGeometryXML.cc wouldn't compile without XERCES
- Allow user to force bitness of build using either m32=1 or m64=1
- Added -a, -t, and -b options to janadump. Some modifications
  to JEventLoop, JFactory, and JFactory_base made to allow better
  user control of when GetNrows activates a factory.
- Default for janadump changed to not automatically activate tagged
  factories when printing summary header.