@@ -6,6 +6,7 @@ Changes in version 0.7.6
   matching file was found even if it could be attached. Also,
   print information about seach paths before looking for file
   and not just if it failed to find the plugin.
+- Expose underlying ccdb::Calibration object pointer and mutex
 
 Changes in version 0.7.5p2
 - Fixed bug (yet again) in JStreamLog destructor that caused seg. faults
